samples/_failures_safe/1761196906_253253_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0d51c44.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_e0d51c44.c:157: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_e0d51c44.c:155:34: note: to match this ‘{’
  155 |     static const char* names[] = {
      |                                  ^
./samples/SAFE/__tmp_e0d51c44.c:156:9: error: expected declaration or statement at end of input
  156 |         "IDLE", "READING", "PROCESSING", "WRITING", "ERROR"
      |         ^~~~~~
